--- a/vignettes/GXwasR_overview.Rmd
+++ b/vignettes/GXwasR_overview.Rmd
@@ -4876,8 +4876,9 @@ PRSresult$BestP
 
 ``` r
 PRSresult$PRS_plot
-#> Error in grid.Call.graphics(C_text, as.graphicsAnnot(x$label), x$x, x$y, : Metric information not available for this family/device
 ```
+
+![plot of chunk compute_prs](./overview-ComputePRS-1.png)
 
 ### `GeneticCorrBT()`
 
@@ -5461,7 +5462,133 @@ if (nzchar(Sys.getenv("UKB_IMPUTED_HAPMAP2_PATH"))) {
 #> ℹ 9356 out of 769306 (1.22%) SNPs in reference panel are available in GWAS 2.
 #> ! Warning: More than 1% SNPs in reference panel are missed in GWAS 1. This may generate bias in estimation. Please make sure that you are using the correct reference panel.
 #> ! Warning: More than 1% SNPs in reference panel are missed in GWAS 2. This may generate bias in estimation. Please make sure that you are using the correct reference panel.
-#>   |                                                                                                                      |                                                                                                              |   0%  |                                                                                                                      |==                                                                                                            |   2%  |                                                                                                                      |====                                                                                                          |   3%  |                                                                                                                      |=====                                                                                                         |   5%  |                                                                                                                      |=======                                                                                                       |   6%  |                                                                                                                      |=========                                                                                                     |   8%  |                                                                                                                      |===========                                                                                                   |  10%  |                                                                                                                      |============                                                                                                  |  11%  |                                                                                                                      |==============                                                                                                |  13%  |                                                                                                                      |================                                                                                              |  15%  |                                                                                                                      |==================                                                                                            |  16%  |                                                                                                                      |====================                                                                                          |  18%  |                                                                                                                      |=====================                                                                                         |  19%  |                                                                                                                      |=======================                                                                                       |  21%  |                                                                                                                      |=========================                                                                                     |  23%  |                                                                                                                      |===========================                                                                                   |  24%  |                                                                                                                      |============================                                                                                  |  26%  |                                                                                                                      |==============================                                                                                |  27%  |                                                                                                                      |================================                                                                              |  29%  |                                                                                                                      |==================================                                                                            |  31%  |                                                                                                                      |===================================                                                                           |  32%  |                                                                                                                      |=====================================                                                                         |  34%  |                                                                                                                      |=======================================                                                                       |  35%  |                                                                                                                      |=========================================                                                                     |  37%  |                                                                                                                      |===========================================                                                                   |  39%  |                                                                                                                      |============================================                                                                  |  40%  |                                                                                                                      |==============================================                                                                |  42%  |                                                                                                                      |================================================                                                              |  44%  |                                                                                                                      |==================================================                                                            |  45%  |                                                                                                                      |===================================================                                                           |  47%  |                                                                                                                      |=====================================================                                                         |  48%  |                                                                                                                      |=======================================================                                                       |  50%  |                                                                                                                      |=========================================================                                                     |  52%  |                                                                                                                      |===========================================================                                                   |  53%  |                                                                                                                      |============================================================                                                  |  55%  |                                                                                                                      |==============================================================                                                |  56%  |                                                                                                                      |================================================================                                              |  58%  |                                                                                                                      |==================================================================                                            |  60%  |                                                                                                                      |===================================================================                                           |  61%  |                                                                                                                      |=====================================================================                                         |  63%  |                                                                                                                      |=======================================================================                                       |  65%  |                                                                                                                      |=========================================================================                                     |  66%  |                                                                                                                      |===========================================================================                                   |  68%  |                                                                                                                      |============================================================================                                  |  69%  |                                                                                                                      |==============================================================================                                |  71%  |                                                                                                                      |================================================================================                              |  73%  |                                                                                                                      |==================================================================================                            |  74%  |                                                                                                                      |===================================================================================                           |  76%  |                                                                                                                      |=====================================================================================                         |  77%  |                                                                                                                      |=======================================================================================                       |  79%  |                                                                                                                      |=========================================================================================                     |  81%  |                                                                                                                      |==========================================================================================                    |  82%  |                                                                                                                      |============================================================================================                  |  84%  |                                                                                                                      |==============================================================================================                |  85%  |                                                                                                                      |================================================================================================              |  87%  |                                                                                                                      |==================================================================================================            |  89%  |                                                                                                                      |===================================================================================================           |  90%  |                                                                                                                      |=====================================================================================================         |  92%  |                                                                                                                      |=======================================================================================================       |  94%  |                                                                                                                      |=========================================================================================================     |  95%  |                                                                                                                      |==========================================================================================================    |  97%  |                                                                                                                      |============================================================================================================  |  98%  |                                                                                                                      |==============================================================================================================| 100%
+#> 
+  |                                                                                                                    
+  |                                                                                                              |   0%
+  |                                                                                                                    
+  |==                                                                                                            |   2%
+  |                                                                                                                    
+  |====                                                                                                          |   3%
+  |                                                                                                                    
+  |=====                                                                                                         |   5%
+  |                                                                                                                    
+  |=======                                                                                                       |   6%
+  |                                                                                                                    
+  |=========                                                                                                     |   8%
+  |                                                                                                                    
+  |===========                                                                                                   |  10%
+  |                                                                                                                    
+  |============                                                                                                  |  11%
+  |                                                                                                                    
+  |==============                                                                                                |  13%
+  |                                                                                                                    
+  |================                                                                                              |  15%
+  |                                                                                                                    
+  |==================                                                                                            |  16%
+  |                                                                                                                    
+  |====================                                                                                          |  18%
+  |                                                                                                                    
+  |=====================                                                                                         |  19%
+  |                                                                                                                    
+  |=======================                                                                                       |  21%
+  |                                                                                                                    
+  |=========================                                                                                     |  23%
+  |                                                                                                                    
+  |===========================                                                                                   |  24%
+  |                                                                                                                    
+  |============================                                                                                  |  26%
+  |                                                                                                                    
+  |==============================                                                                                |  27%
+  |                                                                                                                    
+  |================================                                                                              |  29%
+  |                                                                                                                    
+  |==================================                                                                            |  31%
+  |                                                                                                                    
+  |===================================                                                                           |  32%
+  |                                                                                                                    
+  |=====================================                                                                         |  34%
+  |                                                                                                                    
+  |=======================================                                                                       |  35%
+  |                                                                                                                    
+  |=========================================                                                                     |  37%
+  |                                                                                                                    
+  |===========================================                                                                   |  39%
+  |                                                                                                                    
+  |============================================                                                                  |  40%
+  |                                                                                                                    
+  |==============================================                                                                |  42%
+  |                                                                                                                    
+  |================================================                                                              |  44%
+  |                                                                                                                    
+  |==================================================                                                            |  45%
+  |                                                                                                                    
+  |===================================================                                                           |  47%
+  |                                                                                                                    
+  |=====================================================                                                         |  48%
+  |                                                                                                                    
+  |=======================================================                                                       |  50%
+  |                                                                                                                    
+  |=========================================================                                                     |  52%
+  |                                                                                                                    
+  |===========================================================                                                   |  53%
+  |                                                                                                                    
+  |============================================================                                                  |  55%
+  |                                                                                                                    
+  |==============================================================                                                |  56%
+  |                                                                                                                    
+  |================================================================                                              |  58%
+  |                                                                                                                    
+  |==================================================================                                            |  60%
+  |                                                                                                                    
+  |===================================================================                                           |  61%
+  |                                                                                                                    
+  |=====================================================================                                         |  63%
+  |                                                                                                                    
+  |=======================================================================                                       |  65%
+  |                                                                                                                    
+  |=========================================================================                                     |  66%
+  |                                                                                                                    
+  |===========================================================================                                   |  68%
+  |                                                                                                                    
+  |============================================================================                                  |  69%
+  |                                                                                                                    
+  |==============================================================================                                |  71%
+  |                                                                                                                    
+  |================================================================================                              |  73%
+  |                                                                                                                    
+  |==================================================================================                            |  74%
+  |                                                                                                                    
+  |===================================================================================                           |  76%
+  |                                                                                                                    
+  |=====================================================================================                         |  77%
+  |                                                                                                                    
+  |=======================================================================================                       |  79%
+  |                                                                                                                    
+  |=========================================================================================                     |  81%
+  |                                                                                                                    
+  |==========================================================================================                    |  82%
+  |                                                                                                                    
+  |============================================================================================                  |  84%
+  |                                                                                                                    
+  |==============================================================================================                |  85%
+  |                                                                                                                    
+  |================================================================================================              |  87%
+  |                                                                                                                    
+  |==================================================================================================            |  89%
+  |                                                                                                                    
+  |===================================================================================================           |  90%
+  |                                                                                                                    
+  |=====================================================================================================         |  92%
+  |                                                                                                                    
+  |=======================================================================================================       |  94%
+  |                                                                                                                    
+  |=========================================================================================================     |  95%
+  |                                                                                                                    
+  |==========================================================================================================    |  97%
+  |                                                                                                                    
+  |============================================================================================================  |  98%
+  |                                                                                                                    
+  |==============================================================================================================| 100%
 #> 
 #> 
 #> 
@@ -5470,7 +5597,11 @@ if (nzchar(Sys.getenv("UKB_IMPUTED_HAPMAP2_PATH"))) {
 #> • Heritability of phenotype 2:  4.26e-09
 #> • Genetic Covariance:  -5.60e-05
 #> • Genetic Correlation:  -52946.2415ℹ Continuing computing standard error with jackknife
-#>   |                                                                                                                      |                                                                                                              |   0%  |                                                                                                                      |==                                                                                                            |   2%
+#> 
+  |                                                                                                                    
+  |                                                                                                              |   0%
+  |                                                                                                                    
+  |==                                                                                                            |   2%
 #> 
 #> 
 #> • Heritability of phenotype 1: 2.62e-10 ( 0.00e+00 )
